--- a/client/style.scss
+++ b/client/style.scss
@@ -31,6 +31,7 @@ input {
   border: 2px solid #383737;
   height: 100px;
   width: 60%;
+  margin: 25px;
   box-shadow: 3px 5px;
   margin: 0 auto;
 }
