--- a/client/style.scss
+++ b/client/style.scss
@@ -21,7 +21,7 @@ input {
   background: whitesmoke;
   border: 2px solid #383737;
   height: auto;
-  width: 60%;
+  width: 30%;
   box-shadow: 3px 5px;
   margin: 2% auto;
 }
@@ -29,8 +29,8 @@ input {
 #item {
   background: whitesmoke;
   border: 2px solid #383737;
-  height: auto;
-  width: 60%;
+  height: 15%;
+  width: 50%;
   margin: 25px;
   box-shadow: 3px 5px;
   margin: 1% auto;
